--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,19 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>centralized-control-platform</name>
     <description>centralized-control-platform</description>
+
+    <modules>
+        <module>robot-gateway</module>
+        <module>robot-auth</module>
+    </modules>
+
     <packaging>pom</packaging>
 
     <properties>
+        <sa.token.version>1.34.0</sa.token.version>
         <spring.boot.version>2.6.14</spring.boot.version>
+        <spring.cloud.version>2021.0.6</spring.cloud.version>
+        <spring.cloud.alibaba.version>2021.0.5.0</spring.cloud.alibaba.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -32,6 +41,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -44,9 +54,34 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.yaml</groupId>
-                <artifactId>snakeyaml</artifactId>
-                <version>2.0</version>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring.cloud.alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>net.minidev</groupId>
+                <artifactId>json-smart</artifactId>
+                <version>2.4.10</version>
+            </dependency>
+            <!-- sa-token 权限认证, 在线文档：https://sa-token.cc/ -->
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-spring-boot-starter</artifactId>
+                <version>${sa.token.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-jwt</artifactId>
+                <version>${sa.token.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -78,4 +113,18 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>mirror</id>
+            <name>阿里云镜像</name>
+            <url>https://maven.aliyun.com/repository/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
