--- a/robot-gateway/src/main/resources/application.yml
+++ b/robot-gateway/src/main/resources/application.yml
@@ -15,9 +15,7 @@ spring:
         file-extension: yml
         server-addr: 172.16.161.244:8848
         extension-configs:
-          - data-id: mysql-${spring.profiles.active}.yaml
-            refresh: true
-          - data-id: redis-${spring.profiles.active}.yaml
+          - data-id: redis-${spring.profiles.active}.yml
             refresh: true
   config:
     import:
