--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,15 @@
         <module>robot-gateway</module>
         <module>robot-auth</module>
         <module>robot-common</module>
+        <module>robot-model</module>
     </modules>
 
     <packaging>pom</packaging>
 
     <properties>
+        <hutool.version>5.8.18</hutool.version>
         <sa.token.version>1.34.0</sa.token.version>
+        <mybatis.plus.version>3.5.3.1</mybatis.plus.version>
         <spring.boot.version>2.6.14</spring.boot.version>
         <spring.cloud.version>2021.0.6</spring.cloud.version>
         <spring.cloud.alibaba.version>2021.0.5.0</spring.cloud.alibaba.version>
@@ -86,6 +89,11 @@
                 <groupId>cn.dev33</groupId>
                 <artifactId>sa-token-jwt</artifactId>
                 <version>${sa.token.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis.plus.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
